# rust-aoc2022

day1/src/: main.rs
day10/: Cargo.toml
day10/src/: main.rs
day2/src/: main.rs
day3/src/: main.rs
day4/: Cargo.toml
day4/src/: main.rs
day5/: Cargo.toml
day5/src/: main.rs
day6/src/: main.rs
day7/: Cargo.toml
day7/src/: main.rs
day8/: Cargo.toml
day8/src/: main.rs
day9 - egui/: Cargo.toml
day9 - egui/src/: main.rs
day9/src/: main.rs  parse.rs
