[package]
name = "day9"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
lto = true

[dependencies]
console_error_panic_hook = "0.1.7"
eframe = "0.22.0"
egui = "0.22.0"
itertools = "0.11.0"
nom = "7.1.3"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.37"
